    links for attached messages.
  - Fixed wrapping (#1043576) and encoding (#1246305) of multibyte
    charsets. Fix requires PHP with mbstring support. If mbstring support
    is not present or character set is not supported by mbstring
    extension, fixes are not applied.
  - Rebuild URL to sound file in newmail plugin when sound file is played
    (#1233530).

Version 1.4.5 - 13 July 2005
----------------------------
  - Update COPYING with new address of the FSF.
  - Fixed bad code from patch being pasted instead of
    executed.
  - Fixed missing quote character in img tag if blank src is supplied.
  - Really fix off-by-one error in search.php now (array_pop works
    differently in different PHP versions).
  - Javascript relied on rg=1 in the login page to force focus to
    password box if username was supplied as a url arg (#1222617).
  - Disabled unmaintained Estonian translation.
  - Allowed use of wildcards in LDAP address book search expressions. Issue
    is specific to 1.4.5cvs and not present in older versions.
  - Security: Rewrite advanced identity handling to remove call to extraction
    of all POST values. [CVE-2005-2095]
  - Moved imap_logout call in view_header.php to the end of the script after
    displayPageheader is called.

Version 1.4.5 Release Candidate 1 - 15 June 2005
------------------------------------------------
  - Make SquirrelSpell work with safe_mode enabled, if using PHP >=4.3.0.
    Patch by Ray Ferguson, backported from devel.
  - Add support for Mail-Followup-To header, from devel.
  - Remove is_readable($data_dir) test in configtest, because SquirrelMail
    functions fine with stricter permissions on that dir.
  - 24hr clock format should include a leading 0.
  - Fixed uid based authentication in administrator plugin. Thanks to
    Gareth Johnston.
  - Added three Tahoma stylesheets.
  - Added required code to display error message that might occur when options
    are saved.